fix:letter cut off from the tabe header

--- a/src/styles/_react-datatable-overrides.scss
+++ b/src/styles/_react-datatable-overrides.scss
@@ -114,6 +114,7 @@
     color: $epa-black !important;
     /*white-space: nowrap !important;*/
     margin-right: 1em !important;
+    overflow: visible !important;
   }
   .rdt_TableRow {
     /**/
